Fixed after review for A.Lapin and K.Orlov